min-height on photos prevents layout from jumping

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -23,6 +23,10 @@ ul {
     z-index: -100;
 }
 
+#photos img {
+    min-height: 675px;
+}
+
 #youtubes-search #search-results {
     margin-top: 1em;
 }
